--- a/locust/sample-master.yaml
+++ b/locust/sample-master.yaml
@@ -45,9 +45,22 @@ spec:
     #  do
     #   echo $?
     #  done
+    command:
+    - "/usr/local/bin/bzt"
+    args:
+    - "/taurus-configs/taurus.yaml"
+    - "-o"
+    - "modules.console.disable=true"
+    - "-o"
+    - "settings.artifacts-dir=/taurus-logs/%Y-%m-%d_%H-%M-%S.%f"
     ports:
       - name: tcp
         containerPort: 5557
+    readinessProbe:
+      tcpSocket:
+        port: 5557
+      successThreshold: 1
+      failureThreshold: 3
     resources:
       requests: 
         cpu: 500m
