update constant value

--- a/pt-operator/config/crd/bases/perftest.com.google.gtools_pttasks.yaml
+++ b/pt-operator/config/crd/bases/perftest.com.google.gtools_pttasks.yaml
@@ -116,11 +116,11 @@ spec:
                 description: (scenario name) -> (PtTaskScenario)
                 type: object
               type:
-                default: local
+                default: Local
                 description: 'Task type: local/distributed'
                 enum:
-                - local
-                - distributed
+                - Local
+                - Distributed
                 type: string
             required:
             - execution
