--- a/pt-operator/config/samples/perftest_v1_pttask.yaml
+++ b/pt-operator/config/samples/perftest_v1_pttask.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   type: local
   execution:
-    - executor: locust
+    - executor: Locust
       concurrency: 100
       ramp-up: 10s
       hold-for: 5m
