--- a/pt-operator/config/manager/manager.yaml
+++ b/pt-operator/config/manager/manager.yaml
@@ -98,5 +98,12 @@ spec:
           requests:
             cpu: 10m
             memory: 64Mi
+      volumeMounts:
+      - mountPath: /taurus-logs
+        name: bzt-pvc
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
+      volumes:
+        - name: bzt-pvc
+          persistentVolumeClaim:
+          claimName: bzt-filestore-pvc
