--- a/pt-operator/config/crd/bases/perftest.com.google.gtools_pttasks.yaml
+++ b/pt-operator/config/crd/bases/perftest.com.google.gtools_pttasks.yaml
@@ -142,7 +142,7 @@ spec:
                 description: Task type
                 enum:
                 - Local
-                - Distributed
+                - Distribution
                 type: string
             required:
             - execution
@@ -160,8 +160,8 @@ spec:
                 additionalProperties:
                   type: string
                 description: 'Phases included following status per testing scenario:
-                  - "privision_master", - "provision_worker", - "testing", - "achieving_logs",
-                  - "done"'
+                  (scenario name) -> (phase) - "PrivisionMaster", - "ProvisionWorker",
+                  - "Testing", - "Done"'
                 type: object
             required:
             - id
