--- a/pt-operator/config/samples/perftest_v1_distributed_pttask.yaml
+++ b/pt-operator/config/samples/perftest_v1_distributed_pttask.yaml
@@ -34,5 +34,7 @@ spec:
     test-example:
       masterImage: asia-docker.pkg.dev/play-api-service/test-images/taurus-base
       workerImage: asia-docker.pkg.dev/play-api-service/test-images/locust-worker
-  localDebug:
+  testingOutput:
+    logDir: ./config/samples
     ldjson: ./config/samples/locust-workers.ldjson
+    bucket: perf-test-achive-cc
