--- a/pt-admin/workflows/provision.yaml
+++ b/pt-admin/workflows/provision.yaml
@@ -167,10 +167,18 @@ main:
                 - ApplyaPtTask:
                     call: http.post
                     args:
-                        url: ${"https://" + input.url + "/v1/apply/pttask"}
+                        url: ${"https://" + input.url + "/v1/apply/pttask/" + sys.get_env("GOOGLE_CLOUD_WORKFLOW_EXECUTION_ID")}
                         auth:
                             type: OIDC
                         body: ${input}
                     result: ptTaskStatus
+    - CreateDashboard:
+        call: http.post
+        args:
+            url: ${"https://" + input.url + "/v1/dashboard/pttask" + sys.get_env("GOOGLE_CLOUD_PROJECT_ID") + "/"+ sys.get_env("GOOGLE_CLOUD_WORKFLOW_EXECUTION_ID")}
+            auth:
+                type: OIDC
+            body: ${input}
+        result: dashboardUrl
     - AllDone:
         return: ${input}
