--- a/pt-admin/workflows/destroy.yaml
+++ b/pt-admin/workflows/destroy.yaml
@@ -1,4 +1,4 @@
-#{"projectId": $${sys.get_env("GOOGLE_CLOUD_PROJECT_ID")}, "network": "pt-vpc-default"}
+# Desctroy curtain resources, which were created for PtTask
 
 main:
     params: [input]
@@ -6,7 +6,7 @@ main:
     - DestroyResource:
         call: http.post
         args:
-            url: $${"https://" + input.url + "/v1/destroy/"+input.executionId}
+            url: $${"https://" + input.url + "/v1/destroy/" + input.projectId + "/" + input.executionId}
             auth:
                 type: OIDC
             body: $${input}
