--- a/pt-operator/config/crd/bases/perftest.com.google.gtools_pttasks.yaml
+++ b/pt-operator/config/crd/bases/perftest.com.google.gtools_pttasks.yaml
@@ -153,7 +153,6 @@ spec:
                         description: Base64 key for service account
                         type: string
                     required:
-                    - percent
                     - region
                     type: object
                   type: array
@@ -188,12 +187,15 @@ spec:
               phase:
                 additionalProperties:
                   type: string
-                description: 'Phases included following status per testing scenario:
-                  (scenario name) -> (phase) - "PrivisionMaster", - "ProvisionWorker",
-                  - "Testing", - "Done"'
+                description: 'Phases included status per testing scenario: (scenario
+                  name) -> (PT_STATUS_*)'
                 type: object
+              ptStatus:
+                description: 'The status of the pttask:: PT_STATUS_*'
+                type: string
             required:
             - id
+            - ptStatus
             type: object
         type: object
     served: true
